@@ -1,0 +1,50 @@
+/*************************************************************************
+ *                                                                       *
+ * Open Dynamics Engine 4J, Copyright (C) 2009-2014 Tilmann Zaeschke     *
+ * All rights reserved.  Email: ode4j@gmx.de   Web: www.ode4j.org        *
+ *                                                                       *
+ * This library is free software; you can redistribute it and/or         *
+ * modify it under the terms of EITHER:                                  *
+ *   (1) The GNU Lesser General Public License as published by the Free  *
+ *       Software Foundation; either version 2.1 of the License, or (at  *
+ *       your option) any later version. The text of the GNU Lesser      *
+ *       General Public License is included with this library in the     *
+ *       file LICENSE.TXT.                                               *
+ *   (2) The BSD-style license that is included with this library in     *
+ *       the file ODE-LICENSE-BSD.TXT and ODE4J-LICENSE-BSD.TXT.         *
+ *                                                                       *
+ * This library is distributed in the hope that it will be useful,       *
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of        *
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the files    *
+ * LICENSE.TXT, ODE-LICENSE-BSD.TXT and ODE4J-LICENSE-BSD.TXT for more   *
+ * details.                                                              *
+ *                                                                       *
+ *************************************************************************/
+package org.ode4j.tests;
+
+import org.junit.Test;
+import org.ode4j.ode.DPlane;
+import org.ode4j.ode.DSpace;
+import org.ode4j.ode.OdeHelper;
+
+import static org.junit.Assert.*;
+
+/**
+ *
+ */
+public class TestIssue0074_PlaneGetQuaternion {
+
+    @SuppressWarnings("deprecation")
+    @Test
+    public void planeGetQuaternionFail() {
+        OdeHelper.initODE2(0);
+        DSpace space = OdeHelper.createHashSpace(null);
+        DPlane plane = OdeHelper.createPlane(space, 0, 0, 1, 0);
+        try {
+            plane.getQuaternion();
+            fail();
+        } catch (RuntimeException e) {
+            assertEquals("geom must be placeable", e.getMessage());
+        }
+    }
+}
